crates/executor/src/tests/sql/dml/snapshots/merge_into/query_merge_into_with_aggregate_null_cross_join.snap
---
source: crates/executor/src/tests/sql/dml/merge_into.rs
description: "\"SELECT COUNT(*) as row_count FROM embucket.public.manifest\""
info: "Setup queries: CREATE TABLE embucket.public.manifest (model VARCHAR, last_success TIMESTAMP); CREATE TABLE embucket.public.base_events (collector_tstamp TIMESTAMP); MERGE INTO manifest m USING (SELECT b.model, a.last_success FROM (SELECT MAX(collector_tstamp) as last_success FROM base_events) a, (SELECT 'model_1' as model UNION ALL SELECT 'model_2') b WHERE a.last_success IS NOT NULL) s ON m.model = s.model WHEN MATCHED THEN UPDATE SET last_success = GREATEST(m.last_success, s.last_success) WHEN NOT MATCHED THEN INSERT (model, last_success) VALUES (s.model, s.last_success)"
---
Ok(
    [
        "+-----------+",
        "| row_count |",
        "+-----------+",
        "| 0         |",
        "+-----------+",
    ],
)
